--- a/lenzi_edoardo_laurea_2018.tex
+++ b/lenzi_edoardo_laurea_2018.tex
@@ -10,9 +10,11 @@
 \usepackage{titlesec} % per formato custom dei titoli dei capitoli
 %\usepackage[italian]{babel}
 \usepackage[utf8x]{inputenc} % per Linux (richiede il pacchetto unicode); lettere accentate
-
 \usepackage{listings}
 \usepackage{color}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
