--- a/lenzi_edoardo_laurea_2018.tex
+++ b/lenzi_edoardo_laurea_2018.tex
@@ -78,9 +78,9 @@
 
 \begin{document}
   \pagenumbering{gobble} 
-  \input{Chapters/initial_page.tex}
+  \input{Chapters/frontispiece.tex}
   \clearpage
-  \input{Chapters/acknowledgements.tex}
+  \input{Chapters/acknowledgments.tex}
   \clearpage
   \pagestyle{plain} % nessuna intestazione e pie pagina con numero al centro
   % inizio numerazione pagine in numeri arabi
@@ -111,6 +111,8 @@
       \input{Chapters/chapter1.tex}
       \input{Chapters/chapter2.tex}
       %\input{Chapters/chapter3.tex}     
+      %\input{Chapters/chapter4.tex}     
+      \input{Chapters/conclusion.tex}     
     \endgroup
 
     % bibliografia in formato bibtex
