--- a/lenzi_edoardo_laurea_2018.tex
+++ b/lenzi_edoardo_laurea_2018.tex
@@ -191,11 +191,17 @@
       \input{Chapters/summary.tex} %massimo 3 pagine 
       \addcontentsline{toc}{chapter}{Sommario} % da aggiungere comunque all'indice
       %%   contesto e motivazioni, breve riassunto del problema affrontato, tecniche utilizzate e/o sviluppate, risultati raggiunti
+      \newpage
       \input{Chapters/chapter1.tex}
+      \newpage
       \input{Chapters/chapter2.tex}
-      \input{Chapters/chapter3.tex}     
-      \input{Chapters/chapter4.tex}     
-      \input{Chapters/conclusion.tex}     
+      \newpage
+      \input{Chapters/chapter3.tex}
+      \newpage     
+      \input{Chapters/chapter4.tex}
+      \newpage     
+      \input{Chapters/conclusion.tex}
+      \newpage     
     \endgroup
 
     % bibliografia in formato bibtex
