--- a/biblio.bib
+++ b/biblio.bib
@@ -1,7 +1,9 @@
+%%%%%%%%%%%% templates %%%%%%%%%%%%%%%
+
 % book
 % Required fields: author or editor, title, publisher, year. 
 % Optional fields: volume or number, series, address, edition, month, note.
-@book{coulouris,
+ @book{coulouris,
   author = {Coulouris  G.  F.,  Dollimore J. e  Kindberg T},
   title = {Distributed Systems: concepts and Design},
   publisher = {Addison-Wesley},
@@ -42,10 +44,111 @@
 % Required fields: none. 
 % Optional fields: author, title, howpublished, month, year, note.
 @misc{ictbusiness,
+  author = {Author},
   title = {ICT business},
   howpublished = {http://www.ictbusiness.it/},
+  month = {01},
+  year = {2018},
   note = {ultimo accesso 15/06/2015}
 }
 
+%%%%%%%%%%%% bibliography %%%%%%%%%%%%%%%
 
+@misc{spaziodati,
+  title = {\textbf{SpazioDati}},
+  howpublished = {\href{https://spaziodati.eu/it/}{https://spaziodati.eu/it}},
+  note = {Home page del sito ufficiale.}
+}
 
+@misc{dandelion,
+  title = {\textbf{Dandelion}},
+  howpublished = {\href{https://dandelion.eu/}{https://dandelion.eu}},
+  note = {Home page del progetto.}
+}
+
+@misc{wikipedia,
+  title = {\textbf{Wikipedia}},
+  howpublished = {\href{https://it.wikipedia.org/wiki/Pagina_principale}{https://it.wikipedia.org}},
+  note = {Main page del portale.}
+}
+
+@misc{wikidata,
+  title = {\textbf{Wikidata}},
+  howpublished = {\href{https://www.wikidata.org/wiki/Wikidata:Main_Page}{https://www.wikidata.org}},
+  note = {Main page del portale.}
+}
+
+@misc{strephit,
+  title = {\textbf{StrepHit}},
+  howpublished = {\href{https://www.mediawiki.org/wiki/StrepHit}{https://www.mediawiki.org/wiki/StrepHit}},
+  note = {Pagina \href{https://www.mediawiki.org/wiki/MediaWiki}{MediaWiki} con tutti i dettagli del progetto.}
+}
+
+@misc{quickstatements,
+  title = {\textbf{QuickStatements}},
+  howpublished = {\href{https://www.wikidata.org/wiki/Help:QuickStatements}{https://www.wikidata.org/wiki/Help:QuickStatements}},
+  note = {Pagina Wikidata\cite{wikidata} dedicata (contentente anche la descrizione completa della sintassi degli \lq\lq statements\rq\rq ).}
+}
+
+@misc{rest,
+  title = {\textbf{Representational State Transfer (REST)}},
+  howpublished = {\href{https://it.wikipedia.org/wiki/Representational_State_Transfer}{https://it.wikipedia.org/wiki/Representational$\_$State$\_$Transfer}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata a REST.}
+}
+
+@misc{api,
+  title = {\textbf{Application Programming Interface (API)}},
+  howpublished = {\href{https://it.wikipedia.org/wiki/Application_programming_interface}{https://it.wikipedia.org/wiki/Application$\_$programming$\_$interface}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata alle API.}
+}
+
+@misc{sparql,
+  title = {\textbf{SPARQL Protocol and RDF Query Language (acronimo ricorsivo SPARQL)}},
+  howpublished = {\href{https://it.wikipedia.org/wiki/SPARQL}{https://it.wikipedia.org/wiki/SPARQL}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata a SPARQL.}
+}
+
+@misc{sparql-query,
+  title = {\textbf{SPARQL Query}},
+  howpublished = {\href{https://www.w3.org/TR/rdf-sparql-query/}{https://www.w3.org/TR/rdf-sparql-query}}
+}
+
+@misc{github,
+  title = {\textbf{GitHub}},
+  howpublished = {\href{https://github.com/}{https://github.com}},
+  note = {Pagina ufficiale.}
+}
+
+@misc{tdd,
+  title = {\textbf{TDD (Test Driven Development)}},
+  howpublished = {\href{https://it.wikipedia.org/wiki/Test_driven_development}{https://it.wikipedia.org/wiki/Test$\_$driven$\_$development}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata a TDD.}
+}
+
+@misc{travis,
+  title = {\textbf{Travis}},
+  howpublished = {\href{https://www.travis-ci.com/}{https://www.travis-ci.com/}},
+  note = {Pagina ufficiale.}
+}
+
+@misc{nuget,
+  title = {\textbf{Nuget}},
+  howpublished = {\href{https://www.nuget.org/}{https://www.nuget.org}},
+  note = {Pagina ufficiale del package manager per .NET.}
+}
+
+@misc{fbk,
+  title = {\textbf{Fondazione Bruno Kessler (FBK)}},
+  howpublished = {\href{https://www.fbk.eu/it/}{https://www.fbk.eu/it}},
+  note = {Pagina ufficiale.}
+}
+
+@misc{rdf,
+  title = {\textbf{Resource Description Framework (RDF)}},
+  howpublished = {\href{https://www.w3.org/RDF/}{https://www.w3.org/RDF}}
+}
+
+@misc{w3c,
+  title = {\textbf{The World Wide Web Consortium (W3C)}},
+  howpublished = {\href{https://www.w3.org/}{https://www.w3.org}}
+}
