--- a/biblio.bib
+++ b/biblio.bib
@@ -53,102 +53,242 @@
 }
 
 %%%%%%%%%%%% bibliography %%%%%%%%%%%%%%%
-
+% Summary
 @misc{spaziodati,
   title = {\textbf{SpazioDati}},
-  howpublished = {\href{https://spaziodati.eu/it/}{https://spaziodati.eu/it}},
+  howpublished = {\url{https://spaziodati.eu/it/}},
   note = {Home page del sito ufficiale.}
-}
-
-@misc{dandelion,
-  title = {\textbf{Dandelion}},
-  howpublished = {\href{https://dandelion.eu/}{https://dandelion.eu}},
-  note = {Home page del progetto.}
 }
 
 @misc{wikipedia,
   title = {\textbf{Wikipedia}},
-  howpublished = {\href{https://it.wikipedia.org/wiki/Pagina_principale}{https://it.wikipedia.org}},
+  howpublished = {\url{https://it.wikipedia.org/wiki/Pagina_principale}},
   note = {Main page del portale.}
 }
 
 @misc{wikidata,
   title = {\textbf{Wikidata}},
-  howpublished = {\href{https://www.wikidata.org/wiki/Wikidata:Main_Page}{https://www.wikidata.org}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Wikidata:Main_Page}},
   note = {Main page del portale.}
+}
+
+@misc{wikimedia,
+  title = {\textbf{Wikimedia}},
+  howpublished = {\url{https://www.wikimedia.org/}},
+  note = {Main page del portale.}
+}
+
+@misc{dbpedia,
+  title = {\textbf{DBpedia}},
+  howpublished = {\url{https://wiki.dbpedia.org/about}},
+  note = {Main page del portale.}
+}
+
+@misc{mediawiki,
+  title = {\textbf{Mediawiki}},
+  howpublished = {\url{https://www.mediawiki.org/wiki/MediaWiki}}
 }
 
 @misc{strephit,
   title = {\textbf{StrepHit}},
-  howpublished = {\href{https://www.mediawiki.org/wiki/StrepHit}{https://www.mediawiki.org/wiki/StrepHit}},
-  note = {Pagina \href{https://www.mediawiki.org/wiki/MediaWiki}{MediaWiki} con tutti i dettagli del progetto.}
+  howpublished = {\url{https://www.mediawiki.org/wiki/StrepHit}},
+  note = {Pagina MediaWiki\cite{mediawiki} con tutti i dettagli del progetto.}
 }
 
 @misc{quickstatements,
   title = {\textbf{QuickStatements}},
-  howpublished = {\href{https://www.wikidata.org/wiki/Help:QuickStatements}{https://www.wikidata.org/wiki/Help:QuickStatements}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Help:QuickStatements}},
   note = {Pagina Wikidata\cite{wikidata} dedicata (contentente anche la descrizione completa della sintassi degli \lq\lq statements\rq\rq ).}
 }
 
 @misc{rest,
   title = {\textbf{Representational State Transfer (REST)}},
-  howpublished = {\href{https://it.wikipedia.org/wiki/Representational_State_Transfer}{https://it.wikipedia.org/wiki/Representational$\_$State$\_$Transfer}},
+  howpublished = {\url{https://it.wikipedia.org/wiki/Representational_State_Transfer}},
   note = {Pagina Wikipedia\cite{wikipedia} dedicata a REST.}
 }
 
 @misc{api,
   title = {\textbf{Application Programming Interface (API)}},
-  howpublished = {\href{https://it.wikipedia.org/wiki/Application_programming_interface}{https://it.wikipedia.org/wiki/Application$\_$programming$\_$interface}},
+  howpublished = {\url{https://it.wikipedia.org/wiki/Application_programming_interface}},
   note = {Pagina Wikipedia\cite{wikipedia} dedicata alle API.}
+}
+
+@misc{git,
+  title = {\textbf{Git}},
+  howpublished = {\url{https://git-scm.com/}}
 }
 
 @misc{sparql,
   title = {\textbf{SPARQL Protocol and RDF Query Language (acronimo ricorsivo SPARQL)}},
-  howpublished = {\href{https://it.wikipedia.org/wiki/SPARQL}{https://it.wikipedia.org/wiki/SPARQL}},
+  howpublished = {\url{https://it.wikipedia.org/wiki/SPARQL}},
   note = {Pagina Wikipedia\cite{wikipedia} dedicata a SPARQL.}
 }
 
+@misc{sparql-ui,
+  title = {\textbf{SPARQL interface}},
+  howpublished = {\url{https://query.wikidata.org/}},
+  note = {Interfaccia online per lanciare query SPARQL\cite{sparql} su Wikidata\cite{wikidata}.}
+}
+
+@misc{sparql-end-point,
+  title = {\textbf{SPARQL endp-point}},
+  howpublished = {\url{https://query.wikidata.org/bigdata/namespace/wdq/sparql?query=<SPARQL>}}
+}
+
+\href{
+
 @misc{sparql-query,
   title = {\textbf{SPARQL Query}},
-  howpublished = {\href{https://www.w3.org/TR/rdf-sparql-query/}{https://www.w3.org/TR/rdf-sparql-query}}
+  howpublished = {\url{https://www.w3.org/TR/rdf-sparql-query/}}
 }
 
 @misc{github,
   title = {\textbf{GitHub}},
-  howpublished = {\href{https://github.com/}{https://github.com}},
+  howpublished = {\url{https://github.com/}},
   note = {Pagina ufficiale.}
 }
 
 @misc{tdd,
   title = {\textbf{TDD (Test Driven Development)}},
-  howpublished = {\href{https://it.wikipedia.org/wiki/Test_driven_development}{https://it.wikipedia.org/wiki/Test$\_$driven$\_$development}},
+  howpublished = {\url{https://it.wikipedia.org/wiki/Test_driven_development}},
   note = {Pagina Wikipedia\cite{wikipedia} dedicata a TDD.}
 }
 
 @misc{travis,
   title = {\textbf{Travis}},
-  howpublished = {\href{https://www.travis-ci.com/}{https://www.travis-ci.com/}},
+  howpublished = {\url{https://www.travis-ci.com/}},
   note = {Pagina ufficiale.}
 }
 
 @misc{nuget,
   title = {\textbf{Nuget}},
-  howpublished = {\href{https://www.nuget.org/}{https://www.nuget.org}},
+  howpublished = {\url{https://www.nuget.org/}},
   note = {Pagina ufficiale del package manager per .NET.}
 }
 
 @misc{fbk,
   title = {\textbf{Fondazione Bruno Kessler (FBK)}},
-  howpublished = {\href{https://www.fbk.eu/it/}{https://www.fbk.eu/it}},
+  howpublished = {\url{https://www.fbk.eu/it/}},
   note = {Pagina ufficiale.}
 }
 
 @misc{rdf,
   title = {\textbf{Resource Description Framework (RDF)}},
-  howpublished = {\href{https://www.w3.org/RDF/}{https://www.w3.org/RDF}}
+  howpublished = {\url{https://www.w3.org/RDF/}}
 }
 
 @misc{w3c,
   title = {\textbf{The World Wide Web Consortium (W3C)}},
-  howpublished = {\href{https://www.w3.org/}{https://www.w3.org}}
+  howpublished = {\url{https://www.w3.org/}}
+}
+
+@misc{docker,
+  title = {\textbf{Docker}},
+  howpublished = {\url{https://www.docker.com/}},
+  note = {Pagina ufficiale.}
+}
+
+@misc{ant,
+  title = {\textbf{Apache Ant}},
+  howpublished = {\url{https://ant.apache.org/}},
+  note = {Pagina ufficiale.}
+}
+
+@misc{open-jdk,
+  title = {\textbf{open-jdk}},
+  howpublished = {\url{https://hub.docker.com/_/openjdk/}},
+  note = {Docker image.}
+}
+
+@misc{hub-docker,
+  title = {\textbf{Hub Docker}},
+  howpublished = {\url{https://hub.docker.com/}}
+}
+
+@misc{jmx,
+  title = {\textbf{JMX Exporter}},
+  howpublished = {\url{https://github.com/prometheus/jmx_exporter}},
+  note = {GitHub page.}
+}
+
+@misc{docker-prometheus,
+  title = {\textbf{Prometheus}},
+  howpublished = {\url{https://hub.docker.com/r/prom/prometheus/}},
+  note = {Docker image.}
+}
+
+@misc{docker-grafana,
+  title = {\textbf{Grafana}},
+  howpublished = {\url{https://hub.docker.com/r/grafana/grafana/}},
+  note = {Docker image.}
+}
+
+@misc{prometheus,
+  title = {\textbf{Prometheus}},
+  howpublished = {\url{https://prometheus.io/}},
+  note = {Sito ufficiale.}
+}
+
+@misc{grafana,
+  title = {\textbf{Grafana}},
+  howpublished = {\url{https://grafana.com/}},
+  note = {Sito ufficiale.}
+}
+
+% Dandelion
+
+@misc{dandelion,
+  title = {\textbf{Dandelion}},
+  howpublished = {\url{https://dandelion.eu/}},
+  note = {Home page del progetto.}
+}
+
+%% Dandelion Demo
+
+@misc{entity-extraction-demo,
+  title = {\textbf{Dandelion, entity extraction demo}},
+  howpublished = {\url{https://dandelion.eu/semantic-text/entity-extraction-demo/}},
+}
+
+@misc{text-similarity-demo,
+  title = {\textbf{Dandelion, text similarity demo}},
+  howpublished = {\url{https://dandelion.eu/semantic-text/text-similarity-demo/}},
+}
+
+@misc{text-classification-demo,
+  title = {\textbf{Dandelion, text classification demo}},
+  howpublished = {\url{https://dandelion.eu/semantic-text/text-classification-demo/}},
+}
+
+@misc{sentiment-analysis-demo,
+  title = {\textbf{Dandelion, sentiment analysis}},
+  howpublished = {\url{https://dandelion.eu/semantic-text/sentiment-analysis-demo/}},
+}
+
+%% Dandelion API Doc
+
+@misc{dandelion-registration,
+  title = {\textbf{Dandelion registration page}},
+  howpublished = {\url{https://dandelion.eu/accounts/register/}},
+}
+
+% Repo GitHub
+@misc{latex-repo,
+  title = {\textbf{Dandelion.Latex repository}},
+  howpublished = {\url{https://github.com/EdoardoLenzi9/Dandelion.LaTeX}},
+}
+
+@misc{dandelion-repo,
+  title = {\textbf{Dandelion.Relatedness repository}},
+  howpublished = {\url{https://github.com/EdoardoLenzi9/Dandelion.Relatedness}},
+}
+
+@misc{client-repo,
+  title = {\textbf{SpazioDati.Dandelion-eu repository}},
+  howpublished = {\url{https://github.com/EdoardoLenzi9/SpazioDati.Dandelion-eu}},
+}
+
+@misc{strephit-repo,
+  title = {\textbf{DWikipedia.StrepHit repository}},
+  howpublished = {\url{{https://github.com/EdoardoLenzi9/Wikipedia.StrepHit}},
 }
