--- a/biblio.bib
+++ b/biblio.bib
@@ -166,6 +166,57 @@
   note = {Pagina ufficiale del package manager per .NET.}
 }
 
+@misc{mvc,
+  title = {\textbf{Model-View-Controller (MVC)}},
+  howpublished = {\url{https://it.wikipedia.org/wiki/Model-view-controller}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata a MVC.}
+}
+
+@misc{inversion-of-control,
+  title = {\textbf{Inversion of control (IoC)}},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Inversion_of_control}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata a IoC.}
+}
+
+@misc{dependency-injection,
+  title = {\textbf{Dependency Injection}},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Dependency_injection}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata alla dependency injection.}
+}
+
+@misc{newtonsoft-json,
+  title = {\textbf{Newtonsoft.Json}},
+  howpublished = {\url{https://www.nuget.org/packages/newtonsoft.json/}},
+  note = {Pagina Nuget \cite{nuget} dedicata.}
+}
+
+@misc{simple-injector,
+  title = {\textbf{SimpleInjector}},
+  howpublished = {\url{https://www.nuget.org/packages/SimpleInjector/}},
+  note = {Pagina Nuget \cite{nuget} dedicata.}
+}
+
+@misc{xunit,
+  title = {\textbf{XUnit}}, 
+  howpublished = {\url{https://www.nuget.org/packages/xunit/}},
+  note = {Pagina Nuget \cite{nuget} dedicata.}
+}
+
+@misc{xunit-repo,
+  title = {\textbf{XUnit GitHub repository}},
+  howpublished = {\url{https://github.com/xunit/xunit}}
+}
+
+@misc{wyam,
+  title = {\textbf{Wyam}},
+  howpublished = {\url{https://wyam.io/}}
+}
+
+@misc{code-doc,
+  title = {\textbf{Code documentation}},
+  howpublished = {\url{https://docs.microsoft.com/en-us/dotnet/csharp/codedoc}}
+}
+
 @misc{fbk,
   title = {\textbf{Fondazione Bruno Kessler (FBK)}},
   howpublished = {\url{https://www.fbk.eu/it/}},
@@ -270,6 +321,11 @@
 @misc{dandelion-registration,
   title = {\textbf{Dandelion registration page}},
   howpublished = {\url{https://dandelion.eu/accounts/register/}},
+}
+
+@misc{dandelion-doc,
+  title = {\textbf{Dandelion API documentation}},
+  howpublished = {\url{https://dandelion.eu/docs/}},
 }
 
 % Repo GitHub
