--- a/biblio.bib
+++ b/biblio.bib
@@ -316,6 +316,12 @@
   howpublished = {\url{https://dandelion.eu/semantic-text/sentiment-analysis-demo/}},
 }
 
+@misc{lucene,
+  title = {\textbf{Lucene}},
+  howpublished = {\url{https://it.wikipedia.org/wiki/Lucene}},
+  note = {Pagina Wikipedia\cite{wikipedia} dedicata a Lucene.}
+}
+
 %% Dandelion API Doc
 
 @misc{dandelion-registration,
