--- a/biblio.bib
+++ b/biblio.bib
@@ -98,7 +98,7 @@
 @misc{quickstatements,
   title = {\textbf{QuickStatements}},
   howpublished = {\url{https://www.wikidata.org/wiki/Help:QuickStatements}},
-  note = {Pagina Wikidata\cite{wikidata} dedicata (contentente anche la descrizione completa della sintassi degli \lq\lq statements\rq\rq ).}
+  note = {Pagina Wikidata\cite{wikidata} dedicata (contentente anche la descrizione completa della sintassi degli \qt{statements}).}
 }
 
 @misc{rest,
@@ -111,6 +111,11 @@
   title = {\textbf{Application Programming Interface (API)}},
   howpublished = {\url{https://it.wikipedia.org/wiki/Application_programming_interface}},
   note = {Pagina Wikipedia\cite{wikipedia} dedicata alle API.}
+}
+
+@misc{unittest,
+  title = {\textbf{Python unittest library}},
+  howpublished = {\url{https://docs.python.org/2/library/unittest.html}}
 }
 
 @misc{git,
@@ -130,7 +135,7 @@
   note = {Interfaccia online per lanciare query SPARQL\cite{sparql} su Wikidata\cite{wikidata}.}
 }
 
-@misc{sparql-end-point,
+@misc{sparql-endpoint,
   title = {\textbf{SPARQL endp-point}},
   howpublished = {\url{https://query.wikidata.org/bigdata/namespace/wdq/sparql?query=<SPARQL>}}
 }
@@ -256,6 +261,16 @@
   howpublished = {\url{https://hub.docker.com/}}
 }
 
+@misc{click,
+  title = {\textbf{Python Click library}},
+  howpublished = {\url{http://click.pocoo.org/5/}}
+}
+
+@misc{virtualenv,
+  title = {\textbf{Python virtualenv}},
+  howpublished = {\url{https://virtualenv.pypa.io/en/stable/}}
+}
+
 @misc{jmx,
   title = {\textbf{JMX Exporter}},
   howpublished = {\url{https://github.com/prometheus/jmx_exporter}},
@@ -352,5 +367,58 @@
 
 @misc{strephit-repo,
   title = {\textbf{DWikipedia.StrepHit repository}},
-  howpublished = {\url{{https://github.com/EdoardoLenzi9/Wikipedia.StrepHit}},
+  howpublished = {\url{https://github.com/EdoardoLenzi9/Wikipedia.StrepHit}},
 }
+
+% StrepHit
+
+@misc{P854,
+  title = {\textbf{"Reference URL", Wikidata property}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Property:P854}},
+}
+
+@misc{Q193660,
+  title = {\textbf{"Ramon Llull", Wikidata item}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Q193660}},
+}
+
+@misc{Q207628,
+  title = {\textbf{"Musical composition", Wikidata item}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Q207628}},
+}
+
+@misc{P106,
+  title = {\textbf{"Occupation", Wikidata property}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Property:P106}},
+}
+
+@misc{Q1373513,
+  title = {\textbf{"NNDB", Wikidata item}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Q1373513}},
+}
+
+@misc{P248,
+  title = {\textbf{"Stated in", Wikidata property}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Property:P248}},
+}
+
+@misc{P1263,
+  title = {\textbf{"NNDB people ID", Wikidata property}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Property:P1263}},
+}
+
+@misc{P813,
+  title = {\textbf{"Retrieved", Wikidata property}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Property:P813}},
+}
+
+@misc{P856,
+  title = {\textbf{"Official website" Wikidata property}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Property:P856}},
+}
+
+@misc{P1630,
+  title = {\textbf{"Formatter URL" Wikidata property}},
+  howpublished = {\url{https://www.wikidata.org/wiki/Property:P1630}},
+}
+
