--- a/lenzi_edoardo_laurea_2018.tex
+++ b/lenzi_edoardo_laurea_2018.tex
@@ -24,6 +24,7 @@
 \usepackage[font=small,labelfont=bf]{caption} 
 \definecolor{customLightGray}{RGB}{239, 240, 241}
 \DeclareRobustCommand{\code}[1]{{\sethlcolor{customLightGray}\hl{#1}}}
+\DeclareRobustCommand{\qt}[1]{{\lq\lq\textit{#1}\rq\rq }}
 \DeclareRobustCommand{\u}[0]{{\textunderscore}}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
