--- a/biblio.bib
+++ b/biblio.bib
@@ -92,25 +92,25 @@
 @misc{strephit,
   title = {\textbf{StrepHit}},
   howpublished = {\url{https://www.mediawiki.org/wiki/StrepHit}},
-  note = {Pagina MediaWiki\cite{mediawiki} con tutti i dettagli del progetto.}
+  note = {Pagina MediaWiki con tutti i dettagli del progetto.}
 }
 
 @misc{quickstatements,
   title = {\textbf{QuickStatements}},
   howpublished = {\url{https://www.wikidata.org/wiki/Help:QuickStatements}},
-  note = {Pagina Wikidata\cite{wikidata} dedicata (contentente anche la descrizione completa della sintassi degli \qt{statements}).}
+  note = {Pagina Wikidata dedicata (contentente anche la descrizione completa della sintassi degli \qt{statements}).}
 }
 
 @misc{rest,
   title = {\textbf{Representational State Transfer (REST)}},
   howpublished = {\url{https://it.wikipedia.org/wiki/Representational_State_Transfer}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata a REST.}
+  note = {Pagina Wikipedia dedicata a REST.}
 }
 
 @misc{api,
   title = {\textbf{Application Programming Interface (API)}},
   howpublished = {\url{https://it.wikipedia.org/wiki/Application_programming_interface}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata alle API.}
+  note = {Pagina Wikipedia dedicata alle API.}
 }
 
 @misc{unittest,
@@ -126,13 +126,13 @@
 @misc{sparql,
   title = {\textbf{SPARQL Protocol and RDF Query Language (acronimo ricorsivo SPARQL)}},
   howpublished = {\url{https://it.wikipedia.org/wiki/SPARQL}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata a SPARQL.}
+  note = {Pagina Wikipedia dedicata a SPARQL.}
 }
 
 @misc{sparql-ui,
   title = {\textbf{SPARQL interface}},
   howpublished = {\url{https://query.wikidata.org/}},
-  note = {Interfaccia online per lanciare query SPARQL\cite{sparql} su Wikidata\cite{wikidata}.}
+  note = {Interfaccia online per lanciare query SPARQL su Wikidata.}
 }
 
 @misc{sparql-endpoint,
@@ -156,7 +156,7 @@
 @misc{tdd,
   title = {\textbf{TDD (Test Driven Development)}},
   howpublished = {\url{https://it.wikipedia.org/wiki/Test_driven_development}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata a TDD.}
+  note = {Pagina Wikipedia dedicata a TDD.}
 }
 
 @misc{travis,
@@ -174,37 +174,37 @@
 @misc{mvc,
   title = {\textbf{Model-View-Controller (MVC)}},
   howpublished = {\url{https://it.wikipedia.org/wiki/Model-view-controller}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata a MVC.}
+  note = {Pagina Wikipedia dedicata a MVC.}
 }
 
 @misc{inversion-of-control,
   title = {\textbf{Inversion of control (IoC)}},
   howpublished = {\url{https://en.wikipedia.org/wiki/Inversion_of_control}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata a IoC.}
+  note = {Pagina Wikipedia dedicata a IoC.}
 }
 
 @misc{dependency-injection,
   title = {\textbf{Dependency Injection}},
   howpublished = {\url{https://en.wikipedia.org/wiki/Dependency_injection}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata alla dependency injection.}
+  note = {Pagina Wikipedia dedicata alla dependency injection.}
 }
 
 @misc{newtonsoft-json,
   title = {\textbf{Newtonsoft.Json}},
   howpublished = {\url{https://www.nuget.org/packages/newtonsoft.json/}},
-  note = {Pagina Nuget \cite{nuget} dedicata.}
+  note = {Pagina Nuget  dedicata.}
 }
 
 @misc{simple-injector,
   title = {\textbf{SimpleInjector}},
   howpublished = {\url{https://www.nuget.org/packages/SimpleInjector/}},
-  note = {Pagina Nuget \cite{nuget} dedicata.}
+  note = {Pagina Nuget  dedicata.}
 }
 
 @misc{xunit,
   title = {\textbf{XUnit}}, 
   howpublished = {\url{https://www.nuget.org/packages/xunit/}},
-  note = {Pagina Nuget \cite{nuget} dedicata.}
+  note = {Pagina Nuget  dedicata.}
 }
 
 @misc{xunit-repo,
@@ -334,7 +334,7 @@
 @misc{lucene,
   title = {\textbf{Lucene}},
   howpublished = {\url{https://it.wikipedia.org/wiki/Lucene}},
-  note = {Pagina Wikipedia\cite{wikipedia} dedicata a Lucene.}
+  note = {Pagina Wikipedia dedicata a Lucene.}
 }
 
 %% Dandelion API Doc
