--- a/lenzi_edoardo_laurea_2018.tex
+++ b/lenzi_edoardo_laurea_2018.tex
@@ -18,6 +18,7 @@
 \usepackage{hyperref} 
 \usepackage{xcolor}
 \usepackage{color,soul}
+\usepackage[italian]{babel} 
 \usepackage[bottom]{footmisc}
 
 \usepackage{graphicx} % Required for including images
